<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IpStr"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/default_ip"
        android:singleLine="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_ok"
            android:id="@+id/dlg_btn_Ok"
            android:layout_weight="0.86" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_cancel"
            android:id="@+id/dlg_btn_cancel"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>


